<resources>
    <string name="app_name">BUDDIES</string>
    <string name="setYourPreference">Set Your Preference</string>
    <string name="language">LANGUAGE</string>
    <string name="food">FOOD</string>
    <string name="interest">INTEREST</string>
    <string name="etc">ETC</string>
    <string name="title_activity_bottom">bottom</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">Map</string>
</resources>
